# prack-numbers-systems

./: CMakeLists.txt  big_int.cpp  big_int.h  button.cpp  button.h  converter.h  error_message.cpp  error_message.h  fraction.cpp  fraction.h  general_data.h  inoutput_field.cpp  inoutput_field.h  inoutput_window.cpp  inoutput_window.h  input.txt  input_window.cpp  input_window.h  main.cpp  output_window.cpp  output_window.h  readme.md  rounded_rectangle.cpp  rounded_rectangle.h
